logs/classwerk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/classwerk'...
Compiling './lib/python3.5/site-packages/classwerk/cli.py'...
***   File "./lib/python3.5/site-packages/classwerk/cli.py", line 43
    print Colors.warn("Could not find profile '%s' in '%s', generating new credentials." % (args.profile, args.file))
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/classwerk/cmds'...
Compiling './lib/python3.5/site-packages/classwerk/cmds/create_issue.py'...
***   File "./lib/python3.5/site-packages/classwerk/cmds/create_issue.py", line 15
    print Colors.error("Can't find input directory for issues!")
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classwerk/cmds/delete_repos.py'...
***   File "./lib/python3.5/site-packages/classwerk/cmds/delete_repos.py", line 21
    print "=" * 80
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/classwerk/cmds/download_submissions.py'...
***   File "./lib/python3.5/site-packages/classwerk/cmds/download_submissions.py", line 18
    print Colors.error("Output directory must exist!")
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classwerk/cmds/init_repos.py'...
***   File "./lib/python3.5/site-packages/classwerk/cmds/init_repos.py", line 45
    print "-> %s (%s/%s)" % (team, i, len(teams))
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classwerk/cmds/push_files.py'...
***   File "./lib/python3.5/site-packages/classwerk/cmds/push_files.py", line 29
    print "-> %s (%s/%s)" % (name, i, len(teams))
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/classwerk/cmds/tag_submissions.py'...
***   File "./lib/python3.5/site-packages/classwerk/cmds/tag_submissions.py", line 34
    print "-> %s (%s/%s)" % (name, i, len(teams))
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/classwerk-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/github3'...
Listing './lib/python3.5/site-packages/github3/gists'...
Listing './lib/python3.5/site-packages/github3/issues'...
Listing './lib/python3.5/site-packages/github3/repos'...
Listing './lib/python3.5/site-packages/github3/search'...
Listing './lib/python3.5/site-packages/github3.py-1.0.0a4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate.py-3.0.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
